--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "joi-to-swagger",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -36,7 +36,6 @@
     "index.js"
   ],
   "dependencies": {
-    "lodash.find": "^4.0.0",
-    "lodash.get": "^4.0.2"
+    "lodash": "^4.0.2"
   }
 }
